--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
+    "@types/react-scroll": "^1.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
