--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-scroll": "^1.5.5",
     "react": "^16.13.1",
+    "react-css-transition": "^0.7.4",
     "react-dom": "^16.13.1",
+    "react-prefix-loader": "^1.0.2",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.8.1",
-    "react-transition-group": "^4.4.1",
-    "typescript": "^3.7.5"
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
