--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
-    "react-transition-group": "^4.4.1",
-    "typescript": "^4.0.2"
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
