--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-scroll": "^1.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
