--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1",
+    "shortid": "^2.2.15",
     "typescript": "^4.0.2"
   },
   "scripts": {
